--- a/src/frontend/components/CSS/header.css
+++ b/src/frontend/components/CSS/header.css
@@ -18,7 +18,9 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 1rem;
-    border-bottom: 1px solid black;
+    /* border-bottom: 1px solid black; */
+    background: linear-gradient(90deg, rgba(169,186,228,1) 31%, rgba(147,105,190,1) 76%);
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
 }
 .logoImg{
     cursor: pointer;
@@ -33,6 +35,7 @@
     border: 1px solid black;
     border-radius: 15px;
     padding: 10px 20px;
+    background-color: #fff;
 }
 .searchBar input{
     background: transparent;
@@ -40,7 +43,6 @@
     border: none;
     outline: none;
     font-size: 15px;
-    color: rgba(0, 0, 0, 0.596);
 }
 ::placeholder{
     color: rgba(0, 0, 0, 0.596);
@@ -64,4 +66,27 @@
 }
 .user{
     height: 1.3rem;
+}
+.link a{
+    color: #fff;
+}
+.link button{
+    width: 3.3rem;
+    height: 1.7rem;
+    border-radius: 5px;
+    font-weight: 600;
+    border: none;
+    transition: 0.3s ease-out;
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+.link{
+    display: flex;
+    align-items: center;
+}
+.link button:hover{
+    background-color: rgba(0, 0, 0, 0.16);
+    border: 1px solid #fff;
+    transition: 0.3s ease-in;
+    color: #fff;
 }
