--- a/src/frontend/components/CSS/footer.css
+++ b/src/frontend/components/CSS/footer.css
@@ -90,6 +90,28 @@ strong {
     color: #f26896;
     transition: color .15s ease-in-out;
   }
+  a.underline-hover-effect {
+    text-decoration: none;
+  }
   
+  .underline-hover-effect {
+    display: inline-block;
+    padding-bottom: 0.25rem; /* defines the space between text and underline */
+    position: relative;
+  }
+  
+  .underline-hover-effect::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 0;
+    height: 2px;
+    background-color: rgb(252, 252, 252);
+    transition: width 0.25s ease-out;
+  }
+  .underline-hover-effect:hover::before {
+    width: 100%;
+  }
   
   
