--- a/src/frontend/components/CSS/filter.css
+++ b/src/frontend/components/CSS/filter.css
@@ -16,11 +16,20 @@
   @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Oswald:wght@200;300;400;500;600;700&display=swap");
 
   .filter-container{
-    margin: 5px 5px;
     width: 100%;
     height: 100vh;
-    /* background: var(--ac_light); */
+    border-right: 2px solid var(--ac_black);
   }
+
+  .filter-child-container{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    width: 100%;
+    padding-top: 35px;
+    padding-left: 15px;
+  }
+
   .filter-container,h3,h4,p{
     color: var(--ac_black);
   }
