--- a/src/frontend/components/CSS/header.css
+++ b/src/frontend/components/CSS/header.css
@@ -45,7 +45,12 @@
     border-bottom: 1px solid rgba(255, 255, 255, 0.205);
   
   }
-
+  .text-product{
+    opacity: 0.5;
+  }
+  .text-product:hover{
+    opacity: 1;
+  }
   .contact{
     display: flex;
   }
