--- a/src/frontend/productPage/productPage_Css/breed.css
+++ b/src/frontend/productPage/productPage_Css/breed.css
@@ -50,6 +50,17 @@
     position: relative;
     padding: 10px 0px;
     background-color: #fff;
+    overflow: hidden;
+}
+.bgClickLayer{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    height: 100vw;
+    width: 100vh;
+    background: rgba(255, 0, 0, 0);
+    z-index: 10;
 }
 .breed-image img{
     width: 100%;
@@ -67,6 +78,7 @@
     font-size: 25px;
     background: none;
     cursor: pointer;
+    z-index:100;
 }
 .breed-name{
     font-weight: 600;
@@ -75,6 +87,18 @@
 .breed-price{
     font-weight: 500;
     margin: 4px;
+}
+.price-rating{
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 0px 10px 0px;
+}
+.breed-rating{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+   padding: 0px 0px 0px 10px;
+   font-weight: 600;
 }
 .adoptbtn{
     display: flex;
@@ -88,8 +112,12 @@
     font-weight: 600;
     transition: 0.33s all ease-out;
     cursor: pointer;
+    z-index: 100;
 }
 .adoptbtn:hover{
     transform: scale(1.1);
     box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.295);
+}
+.star{
+    margin-right: 5px;
 }
