--- a/src/frontend/components/CSS/header.css
+++ b/src/frontend/components/CSS/header.css
@@ -163,3 +163,11 @@
 .wishlist:hover{
   opacity: 1;
 }
+
+/*side navbar */
+
+.side-navbar{
+  height: 100vh;
+  width: 200px;
+  background: red;
+}
