--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,10 @@
     justify-content: space-between;
     min-height: 100vh;
 }
+.helper-header{
+    display: flex;
+    padding: 5px;
+    border-bottom: 1px solid var(--ac_black);
+    justify-content: space-between ;
+    align-items: center;
+  }
