--- a/src/frontend/cartPage/cartpage.css
+++ b/src/frontend/cartPage/cartpage.css
@@ -1,3 +1,9 @@
 .cart-header-text{
-    height: 100vh;
+    height: 55vh;
+}
+.cart-header-text h1{
+    display: flex;
+    height: 55vh;
+    align-items: center;
+    justify-content: center;
 }
