--- a/src/frontend/cartPage/cartCard.css
+++ b/src/frontend/cartPage/cartCard.css
@@ -24,7 +24,7 @@
   border-radius: 10px;
   margin: 10px;
   padding: 5px 5px;
-  height: 100%;
+  height: 20rem;
   width: 230px;
   position: relative;
   padding: 10px 0px;
@@ -33,12 +33,13 @@
 }
 
 .cart-image img {
+  height: 100%;
   width: 100%;
   padding: 0px 0px 20px 0px;
   border-radius: 5px !important;
 }
 .cart-image {
-  height: auto;
+  height: 10rem;
   width: 200px;
 }
 .remove-cart-card-button {
