--- a/src/frontend/productPage/productPage_Css/breed.css
+++ b/src/frontend/productPage/productPage_Css/breed.css
@@ -33,7 +33,8 @@
      }
   }
 .main-card{
-    width: 200px;
+    width: 230px;
+    height: 20rem;
     margin: 20px;
 
 }
@@ -65,7 +66,12 @@
 .breed-image img{
     width: 100%;
     padding: 0px 0px 20px 0px;
+    padding: 5px 5px;
     
+}
+.breed-image {
+    width: 180px;
+    height: 15rem;
 }
 .breed-wishlist{
     position: absolute;
