--- a/src/frontend/authPage/signUp.css
+++ b/src/frontend/authPage/signUp.css
@@ -82,7 +82,7 @@ form .user-details .input-box input{
     display: flex;
     justify-content: center;
 }
-.registerbtn input{
+.register-btn{
     padding: 10px 10px;
     border: none;
     border-radius: 5px;
@@ -91,6 +91,9 @@ form .user-details .input-box input{
     color: #fff;
     font-family: 'Montserrat', sans-serif;
 }
-.registerbtn input:hover{
+.register-btn:hover{
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+.register-btn:disabled{
+    background-color: var(--accent);
 }
