--- a/src/frontend/cartPage/cartpage.css
+++ b/src/frontend/cartPage/cartpage.css
@@ -32,3 +32,7 @@
     width: 20rem;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   }
+  .add-to-cart-text{
+    height: 55vh;
+    overflow-y: auto;
+  }
