--- a/src/frontend/components/CSS/header.css
+++ b/src/frontend/components/CSS/header.css
@@ -86,6 +86,7 @@
     background: var(--accent);
     border: 2px solid var(--ac_black);
     color: var(--ac_black);
+    cursor: pointer;
   }
 
 
@@ -138,19 +139,6 @@
     transform: scale(1.1);
     box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.295);
 }
-.logout{
-  padding: 10px 30px;
-  font-weight: 700;
-  text-transform: uppercase;
-  background: var(--accent);
-  border: none;
-  border-radius: 50px;
-  transition: 0.33s all ease-out;
-}
-.logout:hover{
-  transform: scale(1.1);
-  box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.295);
-}
 .cart{
   opacity: 0.5;
 }
@@ -161,6 +149,12 @@
   opacity: 0.5;
 }
 .wishlist:hover{
+  opacity: 1;
+}
+.header-user-icon{
+  opacity: 0.5;
+}
+.header-user-icon:hover{
   opacity: 1;
 }
 
