--- a/src/frontend/components/Profile/ProfileCard.css
+++ b/src/frontend/components/Profile/ProfileCard.css
@@ -46,6 +46,7 @@
     border: 1px solid var(--ac_black);
     margin-top: 4rem;
     border-radius: 5px;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
 .profile-card-header {
