box-shadow effect

--- a/src/frontend/components/OrderCard/OrderCard.css
+++ b/src/frontend/components/OrderCard/OrderCard.css
@@ -35,6 +35,10 @@
     background-color: var(--ac_white);
     margin-bottom: 5px;
     border-radius: 10px;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+.order-card:hover{
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 .order-card p{
     padding: 1px 2px;
@@ -53,7 +57,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 5px;
+    border-radius: 10px;
     
 }
 .order-card-details{
